# bqcheck

./: .gitignore  README.md
extension/: background.js  manifest.json  popup.html  popup.js  shared.js
server/: bqcheck.py  pyproject.toml  query.sql  server.py
